--- a/petproject/src/styles/PetDetails.css
+++ b/petproject/src/styles/PetDetails.css
@@ -49,7 +49,7 @@ body{
   border: 2px solid #ccc;
 }
 
-.adoption-badge {
+.adoption-badge.available {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -59,6 +59,17 @@ body{
   border-radius: 20px;
   font-size: 14px;
 }
+.adoption-badge.unavailable {
+ position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: #f7714f;
+  color: white;
+  padding: 6px 12px;
+  border-radius: 20px;
+  font-size: 14px;
+}
+
 
 .pet-info-section {
   flex: 2 1 500px;
